infrastructure/kubernetes/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: migratio-production
  labels:
    name: migratio-production
    environment: production
